fixing overflow and adding reservation button

--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -151,4 +151,6 @@ button:hover {
 
 .room-page-contents {
     grid-area: card;
+    overflow-y: auto;
+    height:100%;
 }
